--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --runInBand",
     "start": "node src/app.js",
     "dev": "nodemon src/app.js"
   },
@@ -18,9 +18,16 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^9.1.5"
+    "mongoose": "^9.1.5",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
+    "puppeteer": "^24.37.5"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11"
+    "express-validator": "^7.0.1",
+    "jest": "^29.6.1",
+    "mongodb-memory-server": "^8.15.2",
+    "nodemon": "^3.1.11",
+    "supertest": "^6.3.3"
   }
 }
